# MVP-SacredField

./: .aliases  .cursorrules  .gitignore  .iterm2_campo_sagrado.sh  .zshrc  AUDITORIA_ARQUITECTURA_SAGRADA.md  BUILD_STATUS.md  CHANGELOG.md  CONSOLIDATION_COMPLETE.md  GIT_FRESH_START.md  GIT_MIGRATION_PLAN.md  GIT_RESOLUTION_COMPLETE.md  INDICE_AUDITORIA.md  INTEGRACION_3_PODERES_COMPLETADA.md  PLAN_ARQUITECTURA_SAGRADA_EJECUTABLE.md  PLAN_CONSOLIDACION_EJECUTABLE.md  PUSH_STATUS.md  README.md  RESUMEN_AUDITORIA.md  SESSION_SUMMARY.md  handoff.md  test_integracion.sh  verificar_sistema.sh
.claude-code/: project.json
apps/backend/: .coveragerc  .env.example  .gitignore  .railwayignore  CAPA_2_SOCIAL_FUNCIONAL.md  INTEGRACION_7_CAPAS_COMPLETADA.md  README.md  SETUP_COMPLETADO.md  config.py  env.example  pyproject.toml  pytest.ini  requirements-from-poetry.txt  requirements-future.txt  requirements.txt  run.py  test_flujo_completo.sh  test_ministerio_cuerpo.py
apps/backend/agentes/: documentador.py  documentador_mejorado.py  estado_cero.py  guardian.py  orquestador.py
apps/backend/alembic/versions/: create_decretos_sacrales.py
apps/backend/api/: arquitectura_sagrada.py  calendario.py  calendario_bidireccional.py  configuracion.py  entrelazamiento.py  espejo_diario.py  estado_cero.py  estado_cero_simple.py  estructura.py  gobierno.py  guardian.py  main.py  manifestaciones.py  octavas.py  orquestador.py  pilares.py  ritual_maghrib.py  sistema_entrelazamiento.py  universo_imaginal.py  vistas_temporales.py
apps/backend/integraciones/: anytype.py  google_calendar.py  obsidian.py
apps/backend/middleware/: __init__.py  security.py
apps/backend/ministerios/: __init__.py
apps/backend/ministerios/capital/: __init__.py
apps/backend/ministerios/conexion/: __init__.py
apps/backend/ministerios/creacion/: __init__.py
apps/backend/ministerios/cuerpo/: __init__.py
apps/backend/ministerios/mente/: __init__.py
apps/backend/ministerios/significado/: __init__.py
apps/backend/ministerios/soberania/: __init__.py
apps/backend/models/: contexto_social.py  database.py  decreto_sacral.py  diseno_humano.py  estado_biologico.py  estado_emocional.py  ley_octava.py  prisma_personal.py  schemas.py  tipologia_cognitiva.py  universo.py
apps/backend/scripts/: analizar_ahora.sh  configurar_api_key.sh  configurar_prisma.py  generar_configuracion_agentes.py  generar_datos_prueba.py  generar_secretos.py  inicio_diario.sh  init_db.py  perfil_ejemplo.json  perfil_ejemplo.py  personalizar_perfil.py  scheduler_estados_cero.py  setup_google_calendar.py  setup_vault_structure.py  start_worker.sh  test_claude_simple.py  test_integraciones.py  test_preguntas_emergentes.py  validar_fase1.py  validar_fase2.py  validar_fase3.py  verificar_apis.py  verificar_prefajr.py
apps/backend/services/: audit_trail.py  auth.py  calculador_cosmico.py  calendario_hijri.py  claude_client.py  contexto.py  espejo_diario_generator.py  event_queue.py  generador_preguntas.py  generador_preguntas_7_capas.py  gestor_octavas.py  google_calendar.py  hrv_integration.py  metabolizador_metadatos.py  motor_prisma.py  obsidian_parser.py  obsidian_structure.py  orquestador_7_capas.py  pregunta_liturgica.py  propositos.py  rate_limiter.py  tiempos_liturgicos.py  vector_store.py  verificador_pilares.py
apps/backend/tests/: auditoria_7_capas.py  conftest.py  test_flujo_completo_7_ministerios.py  test_integracion_7_capas.py  test_tres_poderes_integracion.py
apps/backend/workers/: ingest_worker.py
config/: campo-sagrado.yaml
docs/: 00-indice-maestro.md  ANALISIS_ARQUITECTURA_Y_PLAN.md  ANALISIS_CORRESPONDENCIA.md  ANALISIS_CORRESPONDENCIA_FINAL.md  API_REFERENCE.md  ARQUITECTURA_AGENTES_ACTUAL.md  ARQUITECTURA_AGENTES_Y_FLUJO.md  ARQUITECTURA_TECNICA.md  AUDITORIA_ARQUITECTONICA.md  COHERENCIA_SISTEMA.md  CORRESPONDENCIA_CALENDARIO_AGENTES.md  ESTRUCTURA_COMPLETA_ORGANISMO.md  FLUJO_INMERSIVO_ESTADO_CERO.md  GUIA_BETA_TESTERS_ESTADO_CERO.md  GUIA_DEPLOY_PRODUCCION.md  GUIA_INTEGRACION_NEXTJS.md  GUIA_SEGURIDAD_PRODUCCION.md  GUIA_USUARIO_COMPLETA.md  HOST_DUAL_INDIVIDUAL_EMPRESA.md  IMPLEMENTACION_COMPLETA.md  MAPA_VISUAL_ARQUITECTURA.md  MEJORES_PRACTICAS_MVP.md  METACONFIGURACION_ORGANISMO.md  OPTIMIZACION_COSTOS_CLAUDE.md  PILARES_ARQUITECTONICOS.md  (+5 more)
(+202 files in other folders)
